# completed-games-tracker-fastapi

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 00af031b8b8d_add_default_brand_platform_aliases.py  0a08baf534e9_autoincrement_pks_and_fk_cascade_fixes.py  0cc6c1137008_merge_display_name_and_missing_indexes_.py  21a93681c8c4_platform_families_and_aliases.py  23829ba2e1c3_add_import_candidates_and_completion_.py  2c9028a8f2ed_replace_game_type_with_is_dlc_and_is_.py  415b9dcd0449_add_metadata_fetched_at_to_game_releases.py  (+33 more)
backend/: conftest.py  igdb.py  importer.py  integrations.py  jobs.py  main.py  match_review.py  models.py  pages.py  pages_account.py  pages_common.py  pages_completions.py  pages_import.py  pages_library.py  pages_match_review.py  psn.py  psn_store.py  requirements.txt  steam.py  steamgriddb.py  test_auth.py  test_auth_pages.py  test_integrations.py  test_models.py  test_pages.py  test_psn.py  test_psn_store.py  test_users.py  titles.py  users.py  worker_state.py
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: tauri-desktop-plan.md
frontend/: index.html
memory/: MEMORY.md  feedback_git_permissions.md  user_style_preferences.md
scripts/: setup-env.sh
(+61 files in other folders)
